--- a/test.html
+++ b/test.html
@@ -21,6 +21,7 @@
     <p class="a"><button onclick="handleClicked(5)">点击这里</button></p>
     <p class="a"><button onclick="handleClicked(6)">点击这里</button></p>
     <p class="a"><button onclick="handleClicked(7)">点击这里</button></p>
+    <p class="a"><button onclick="handleClicked(8)">点击这里</button></p>
 </div>
 <h2>结果，被点击过的元素</h2>
 <div class="p10 res"></div>
